k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dj-ms-core
  labels:
    app.kubernetes.io/name: dj-ms-core
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dj-ms-core
    app.kubernetes.io/component: web
